fix cursor chat cutoff being weird

--- a/assets/base.scss
+++ b/assets/base.scss
@@ -400,7 +400,6 @@ html {
 
 body {
   margin: 0;
-  height: 100vh;
   width: 100vw;
   overflow-x: hidden;
   background-color: var(--light);
